# BillyShell

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: libft.h  minishell.h
src/: libft.c  main.c  minishell.c
